--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
 name = "home-affordability-calculator"
 version = "0.1.0"
-description = "Add your description here"
+description = "Home Affordability Calculator with Streamlit"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.9"
 dependencies = [
-    "numpy>=2.3.2",
-    "plotly>=6.3.0",
-    "sqlalchemy>=2.0.25",
-    "streamlit>=1.48.1",
+    "streamlit>=1.28.0",
+    "plotly>=5.15.0",
+    "numpy>=1.24.0",
 ]
