--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,10 @@ dependencies = [
     "plotly>=5.15.0,<6.0",
     "numpy>=1.24.0,<3.0",
 ]
+
+[tool.hatch.build.targets.wheel]
+include = [
+    "main.py",
+    "streamlit_calculator.py",
+    "README.md",
+]
